[package]
name = "zuddy"
version = "0.1.0"
edition = "2024"


[dependencies]
ahash = "0.8.12"
rand = { version = "0.10.1", optional = true }
serde = { version = "1.0.228", features = ["serde_derive"] }

[features]
default = ["sampling"]
sampling = ["dep:rand"]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
