[package]
name = "zuddy"
version = "0.1.0"
edition = "2024"


[dependencies]
ahash = "0.8.12"
dashmap = { version = "6.2.1", features = ["rayon", "serde"] }
indicatif = "0.18.6"
rand = { version = "0.10.1", optional = true }
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["serde_derive"] }
thiserror = "2.0.18"
uuid = { version = "1.23.4", features = ["v4"] }
zerocopy = { version = "0.8.52", features = ["std", "derive", "alloc"] }

[dev-dependencies]
ron = "0.12.1"
divan = "0.1.21"
anyhow = "1.0.103"
indicatif = "0.18.6"

[[bench]]
name = "queens"
harness = false

[features]
default = ["sampling"]
sampling = ["dep:rand"]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[profile.release]
debug = "line-tables-only"
